Fix bug on tablet and desktop filter

--- a/static-job-listings/sass/style.scss
+++ b/static-job-listings/sass/style.scss
@@ -105,7 +105,7 @@ main{
     margin: 0 .3em;
 }
 
-.hidden{
+.card.hidden{
     display: none;
 }
 
